--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clsx": "2.1.1",
     "kysely": "^0.27.4",
     "next": "15.0.0",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "^5.0.0-beta.25",
     "postcss": "8.4.47",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
