trying to connect to DB, even thought I've tested on Postman and it's loaded into Vercel.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^5.21.1",
     "@tailwindcss/forms": "0.5.9",
     "@types/bcryptjs": "2.4.6",
     "@vercel/postgres": "^0.10.0",
@@ -29,6 +30,7 @@
     "@types/node": "20.16.5",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "prisma": "^5.21.1",
     "typescript": "5.6.3"
   },
   "overrides": {
